--- a/tai.html
+++ b/tai.html
@@ -10,6 +10,7 @@
       @font-face {
         font-family: NSTahlom;
         src: url(assets/NSTahlom.otf);
+        font-display: swap;
       }
       body {
         font-family: Noto Sans, NSTahlom, var(--bs-font-sans-serif);
