--- a/zht.html
+++ b/zht.html
@@ -10,6 +10,7 @@
       @font-face {
         font-family: LXGWClearGothic;
         src: url(assets/LXGWClearGothic.woff);
+        font-display: swap;
       }
       main {
         font-family: LXGWClearGothic, sans-serif;
