--- a/ko.html
+++ b/ko.html
@@ -142,21 +142,21 @@
                   </td>
                 </tr>
               </table>
-              <p>안녕 👋🏻 나는 산전 예요.</p>
+              <p>안녕 👋🏻 나는 산전이예요.</p>
               <p>
                 <i class="moji moji-trans" role="img" aria-label="🏳️‍⚧️"></i
                 >과성별(跨性别)을 자랑 스럽다.
-                <a href="https://mtf.wiki/">MtF-Wiki</a>의성원.
+                <a href="https://mtf.wiki/">MtF-Wiki</a>의 성원.
               </p>
               <p>
-                스커트을 좋아해요 🍱 “미식”
+                스커트를 좋아한다 🍱 “미식”
                 <a href="https://zh.wikipedia.org/wiki/吴语">우어(吴语)</a>의
                 원어민.
               </p>
               <p>👩🏻‍🎓 대학에서 서반아어를 배우다.</p>
               <p>📷 사진. 음유(音游) 유희자: maimai 와 Sound Voltex.</p>
-              <p>✈️ 려행을 몹시 좋아해요! 나는 많은 국가를 려행했다.</p>
-              <p>👀 언어학, NLP등에 흥미이있다.</p>
+              <p>✈️ 려행을 몹시 좋아한다! 나는 많은 국가를 려행했다.</p>
+              <p>👀 언어학, NLP등에 흥미가 있다.</p>
               <p>
                 ⌨️ <i class="moji moji-python"></i>Python<br />
                 <del><i class="moji moji-php"></i>PHP가 최고!</del>
