--- a/ko.html
+++ b/ko.html
@@ -13,6 +13,18 @@
         unicode-range: U+1100 —11FF;
         font-display: swap;
       }
+      @font-face {
+        font-family: PusKul;
+        src: url(assets/PusKul.woff2);
+        unicode-range: U+1100 —11FF;
+        font-display: swap;
+      }
+      strong {
+        font-family: PusKul;
+        font-weight: normal;
+        font-size: 1.5em;
+        color: firebrick;
+      }
       main {
         font-family: CheonRiMa, hiragino sans gb, 微软雅黑, microsoft yahei,
           华文细黑, stheiti, SimHei, var(--bs-font-sans-serif);
@@ -96,6 +108,7 @@
               <h2 class="card-title" style="margin-left: 130px">
                 <ruby>山<rt>산</rt>前<rt>전</rt></ruby>
               </h2>
+              <strong>전진! 전진! 전진!</strong>
               <p>
                 <i class="moji moji-trans"></i>
                 <i class="moji moji-feminism"></i>
