update language li

--- a/es.html
+++ b/es.html
@@ -29,11 +29,11 @@
               <a href="index.html"><i class="moji moji-uk"></i>English</a>
             </li>
             <li class="breadcrumb-item">
-              <a href="zh.html"><i class="moji moji-cn"></i>中文</a>
-              <a href="ug.html">ئۇيغۇرچە</a>
-              <a href="bo.html">བོད་སྐད་</a>
-              <a href="tai.html">Tai</a>
-              <a href="ko.html">조선어</a>
+              <a href="zh.html"><i class="moji moji-cn"></i>中文</a></li>
+<li class="breadcrumb-item"><a href="ug.html">ئۇيغۇرچە</a></li>
+<li class="breadcrumb-item"><a href="bo.html">བོད་སྐད་</a></li>
+<li class="breadcrumb-item"><a href="tai.html">Tai</a></li>
+<li class="breadcrumb-item"><a href="ko.html">조선어</a>
             </li>
             <li class="breadcrumb-item active">
               <i class="moji moji-es"></i>Español
@@ -189,8 +189,8 @@
                 ><img
                   alt="Donate using Liberapay"
                   src="https://liberapay.com/assets/widgets/donate.svg"
-              /></a>
-              <a href="https://ko-fi.com/saeziae"
+              /></a></li>
+<li class="breadcrumb-item"><a href="https://ko-fi.com/saeziae"
                 ><img
                   alt="Buy me a coffee"
                   src="https://img.shields.io/static/v1?label=Ko-fi&message=Buy+me+a+coffee&color=FF5E5B&logo=Ko-fi&style=flat-square"
