--- a/ug-uly.html
+++ b/ug-uly.html
@@ -33,15 +33,15 @@
             </li>
             <li class="breadcrumb-item">
               <a href="zh.html"><i class="moji moji-cn"></i>中文</a>
-              Uyghurche
-              <a href="bo.html">བོད་སྐད་</a>
-              <a href="tai.html">Tai</a>
-              <a href="ko.html">조선어</a>
             </li>
+            <li class="breadcrumb-item active">Uyghurche</li>
+            <li class="breadcrumb-item"><a href="bo.html">བོད་སྐད་</a></li>
+            <li class="breadcrumb-item"><a href="tai.html">Tai</a></li>
+            <li class="breadcrumb-item"><a href="ko.html">조선어</a></li>
             <li class="breadcrumb-item">
               <a href="es.html"><i class="moji moji-es"></i>Español</a>
-              <a href="cat.html">chatalà</a>
             </li>
+            <li class="breadcrumb-item"><a href="cat.html">Català</a></li>
             <li class="breadcrumb-item">
               <a href="ar.html"><i class="moji moji-ar"></i>العربية</a>
             </li>
@@ -63,8 +63,8 @@
           </ol>
         </nav>
         <div class="btn-group justify-content-end">
-          <a class="btn btn-outline-primary btn-sm active">Latin Yëziqi</a>
-          <a href="ug.html" class="btn btn-outline-primary btn-sm"
+          <a class="btn btn-outline-primary btn-sm active">Latin Yëziqi</a
+          ><a href="ug.html" class="btn btn-outline-primary btn-sm"
             >ئەرەب يېزىقى</a
           >
         </div>
