--- a/ug.html
+++ b/ug.html
@@ -44,15 +44,15 @@
             </li>
             <li class="breadcrumb-item">
               <a href="zh.html"><i class="moji moji-cn"></i>中文</a>
-              ئۇيغۇرچە
-              <a href="bo.html">བོད་སྐད་</a>
-              <a href="tai.html">Tai</a>
-              <a href="ko.html">조선어</a>
             </li>
+            <li class="breadcrumb-item active">ئۇيغۇرچە</li>
+            <li class="breadcrumb-item"><a href="bo.html">བོད་སྐད་</a></li>
+            <li class="breadcrumb-item"><a href="tai.html">Tai</a></li>
+            <li class="breadcrumb-item"><a href="ko.html">조선어</a></li>
             <li class="breadcrumb-item">
               <a href="es.html"><i class="moji moji-es"></i>Español</a>
-              <a href="cat.html">Català</a>
             </li>
+            <li class="breadcrumb-item"><a href="cat.html">Català</a></li>
             <li class="breadcrumb-item">
               <a href="ar.html"><i class="moji moji-ar"></i>العربية</a>
             </li>
@@ -104,7 +104,8 @@
             >
             <div class="card-body">
               <h2 class="card-title" style="margin-right: 130px">
-                <img src="assets/altagh.svg" style="height:4rem" alt="التاغ"/> (شەنچيەن)
+                <img src="assets/altagh.svg" style="height: 4rem" alt="التاغ" />
+                (شەنچيەن)
               </h2>
               <p>
                 <i class="moji moji-trans"></i>
