--- a/bo.html
+++ b/bo.html
@@ -42,15 +42,19 @@
             </li>
             <li class="breadcrumb-item">
               <a href="zh.html"><i class="moji moji-cn"></i>中文</a>
-              <a href="ug.html">ئۇيغۇرچە</a>
-              བོད་སྐད་
-              <a href="tai.html">Tai</a>
-              <a href="ko.html">조선어</a>
             </li>
             <li class="breadcrumb-item">
-              <a href="es.html"><i class="moji moji-es"></i>Español</a>
-              <a href="cat.html">Català</a>
+              <a href="ug.html">ئۇيغۇرچە</a>
             </li>
+            <li class="breadcrumb-item active">བོད་སྐད་</li>
+            <li class="breadcrumb-item">
+              <a href="tai.html">Tai</a>
+            </li>
+            <li class="breadcrumb-item"><a href="ko.html">조선어</a></li>
+            <li class="breadcrumb-item">
+              <a href="es.html"><i class="moji moji-es"></i>Español</a>
+            </li>
+            <li class="breadcrumb-item"><a href="cat.html">Català</a></li>
             <li class="breadcrumb-item">
               <a href="ar.html"><i class="moji moji-ar"></i>العربية</a>
             </li>
