--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
             </li>
             <li class="breadcrumb-item">
               <a href="zh.html"><i class="moji moji-cn"></i>中文</a>
-              <a href="ug.html">ئۇيغۇرچە</a>
-              <a href="bo.html">བོད་སྐད་</a>
-              <a href="tai.html">Tai</a>
-              <a href="ko.html">조선어</a>
             </li>
+            <li class="breadcrumb-item"><a href="ug.html">ئۇيغۇرچە</a></li>
+            <li class="breadcrumb-item"><a href="bo.html">བོད་སྐད་</a></li>
+            <li class="breadcrumb-item"><a href="tai.html">Tai</a></li>
+            <li class="breadcrumb-item"><a href="ko.html">조선어</a></li>
             <li class="breadcrumb-item">
               <a href="es.html"><i class="moji moji-es"></i>Español</a>
-              <a href="cat.html">Català</a>
             </li>
+            <li class="breadcrumb-item"><a href="cat.html">Català</a></li>
             <li class="breadcrumb-item">
               <a href="ar.html"><i class="moji moji-ar"></i>العربية</a>
             </li>
@@ -196,9 +196,8 @@
               <a href="https://liberapay.com/estela/donate"
                 ><img
                   alt="Donate using Liberapay"
-                  src="https://liberapay.com/assets/widgets/donate.svg"
-              /></a>
-              <a href="https://ko-fi.com/saeziae"
+                  src="https://liberapay.com/assets/widgets/donate.svg" /></a
+              ><a href="https://ko-fi.com/saeziae"
                 ><img
                   alt="Buy me a coffee"
                   src="https://img.shields.io/static/v1?label=Ko-fi&message=Buy+me+a+coffee&color=FF5E5B&logo=Ko-fi&style=flat-square"
