--- a/ko.html
+++ b/ko.html
@@ -52,15 +52,17 @@
             </li>
             <li class="breadcrumb-item">
               <a href="zh.html"><i class="moji moji-cn"></i>中文</a>
-              <a href="ug.html">ئۇيغۇرچە</a>
-              <a href="bo.html">བོད་སྐད་</a>
-              <a href="tai.html">Tai</a>
-              조선어
             </li>
+            <li class="breadcrumb-item"><a href="ug.html">ئۇيغۇرچە</a></li>
+            <li class="breadcrumb-item"><a href="bo.html">བོད་སྐད་</a></li>
+            <li class="breadcrumb-item">
+              <a href="tai.html">Tai</a>
+            </li>
+            <li class="breadcrumb-item active">조선어</li>
             <li class="breadcrumb-item">
               <a href="es.html"><i class="moji moji-es"></i>Español</a>
-              <a href="cat.html">Català</a>
             </li>
+            <li class="breadcrumb-item"><a href="cat.html">Català</a></li>
             <li class="breadcrumb-item">
               <a href="ar.html"><i class="moji moji-ar"></i>العربية</a>
             </li>
