--- a/es.html
+++ b/es.html
@@ -10,7 +10,7 @@
       .card img {
         max-width: 100%;
       }
-          @font-face {
+      @font-face {
         font-family: CL;
         src: url(assets/cl.woff2);
         font-display: swap;
@@ -29,14 +29,16 @@
               <a href="index.html"><i class="moji moji-uk"></i>English</a>
             </li>
             <li class="breadcrumb-item">
-              <a href="zh.html"><i class="moji moji-cn"></i>中文</a></li>
-<li class="breadcrumb-item"><a href="ug.html">ئۇيغۇرچە</a></li>
-<li class="breadcrumb-item"><a href="bo.html">བོད་སྐད་</a></li>
-<li class="breadcrumb-item"><a href="tai.html">Tai</a></li>
-<li class="breadcrumb-item"><a href="ko.html">조선어</a>
+              <a href="zh.html"><i class="moji moji-cn"></i>中文</a>
             </li>
+            <li class="breadcrumb-item"><a href="ug.html">ئۇيغۇرچە</a></li>
+            <li class="breadcrumb-item"><a href="bo.html">བོད་སྐད་</a></li>
+            <li class="breadcrumb-item"><a href="tai.html">Tai</a></li>
+            <li class="breadcrumb-item"><a href="ko.html">조선어</a></li>
             <li class="breadcrumb-item active">
               <i class="moji moji-es"></i>Español
+            </li>
+            <li class="breadcrumb-item">
               <a href="cat.html">Català</a>
             </li>
             <li class="breadcrumb-item">
@@ -85,7 +87,7 @@
             <div class="card-body">
               <h2 class="card-title" style="margin-left: 130px">
                 Estela (Promontana)
-                            </h2>
+              </h2>
               <p>
                 <i class="moji moji-trans"></i>
                 <i class="moji moji-feminism"></i>
@@ -188,9 +190,8 @@
               <a href="https://liberapay.com/estela/donate"
                 ><img
                   alt="Donate using Liberapay"
-                  src="https://liberapay.com/assets/widgets/donate.svg"
-              /></a></li>
-<li class="breadcrumb-item"><a href="https://ko-fi.com/saeziae"
+                  src="https://liberapay.com/assets/widgets/donate.svg" /></a
+              ><a href="https://ko-fi.com/saeziae"
                 ><img
                   alt="Buy me a coffee"
                   src="https://img.shields.io/static/v1?label=Ko-fi&message=Buy+me+a+coffee&color=FF5E5B&logo=Ko-fi&style=flat-square"
