--- a/zh.html
+++ b/zh.html
@@ -162,33 +162,83 @@
         </div>
         <div class="container-fluid d-flex justify-content-center">
           <div class="card">
-            <div class="card-header">投食山前</div>
+            <div class="card-header">请山前喝奶茶</div>
             <div class="card-body">
-              <img src="assets/images/feed.png" /><br />
+              <img src="assets/images/feed.png" /><br />支付宝 微信
               <hr />
-              <span class="font-monospace" style="font-size: 0.8em"
-                ><span
+              <div id="crypto">
+                <style>
+                  span {
+                    padding: 1px 0;
+                    vertical-align: middle;
+                    font-size: 0.8em;
+                    font-family: monospace;
+                  }
+                </style>
+                <span
+                  class="font-monospace"
                   style="
-                    background-color: lightgrey;
-                    color: black;
-                    padding: 5px 0px 5px 5px;
+                    border-style: solid;
+                    border-color: #3c3c3d;
+                    margin: 0.5em 0;
                   "
-                  ><i class="moji moji-eth"></i>ETH&nbsp;</span
-                ><span
+                  ><span style="background-color: white; color: #3c3c3d"
+                    ><i class="moji moji-eth"></i>ETH&nbsp;</span
+                  ><span
+                    style="
+                      word-break: break-all;
+                      background-color: #3c3c3d;
+                      color: white;
+                      padding-left: 0.2em;
+                    "
+                    >0x888117715a884a7F84B88CBBBF7998745A5FF96D</span
+                  ></span
+                ><br />
+                <span
+                  class="font-monospace"
                   style="
-                    word-break: break-all;
-                    background-color: black;
-                    color: white;
-                    padding: 5px 5px 5px 5px;
+                    border-style: solid;
+                    border-color: #0ac18e;
+                    margin: 0.5em 0;
                   "
-                  >0x888117715a884a7F84B88CBBBF7998745A5FF96D</span
-                ></span
-              ><br />
+                  ><span style="background-color: white; color: #0ac18e"
+                    ><i class="moji moji-bch"></i>bitcoincash:</span
+                  ><span
+                    style="
+                      word-break: break-all;
+                      background-color: #0ac18e;
+                      color: white;
+                    "
+                    >qrde9e0awf5uwe93g0e4r0gncjvkjd8v9vzp3vw503</span
+                  ></span
+                ><br />
+                <span
+                  class="font-monospace"
+                  style="
+                    border-style: solid;
+                    border-color: #ff6600;
+                    margin: 0.5em 0;
+                  "
+                  ><span style="background-color: white; color: #ff6600"
+                    ><i class="moji moji-xmr"></i>XMR&nbsp;</span
+                  ><span
+                    style="
+                      word-break: break-all;
+                      background-color: #ff6600;
+                      color: white;
+                      padding-left: 0.2em;
+                    "
+                    >47qELcVWej3QYFHYZ9JX59QHgmz1eg5ZYGmyZ6wwZs2mYt71xXjAkzrPWvZ922g9jZRF9pEbbbV9QE7mmGArJu187YsXrrt</span
+                  ></span
+                >
+              </div>
               <a href="https://liberapay.com/estela/donate"
                 ><img
                   alt="Donate using Liberapay"
-                  src="https://liberapay.com/assets/widgets/donate.svg" /></a
-              ><a href="https://ko-fi.com/saeziae"
+                  src="https://img.shields.io/static/v1?label=LiberaPay&message=Buy+me+a+coffee&color=F6C915&logo=Liberapay&style=flat-square"
+              /></a>
+              <br />
+              <a href="https://ko-fi.com/saeziae"
                 ><img
                   alt="Buy me a coffee"
                   src="https://img.shields.io/static/v1?label=Ko-fi&message=Buy+me+a+coffee&color=FF5E5B&logo=Ko-fi&style=flat-square"
