--- a/es.html
+++ b/es.html
@@ -167,13 +167,12 @@
           <div class="card">
             <div class="card-header">Comprarme un café</div>
             <div class="card-body">
-              <img src="assets/images/feed.png" /><br />請山前喝奶茶 (con AliPay o
-              WeChat)
+              <img src="assets/images/feed.png" /><br />請山前喝奶茶 (con AliPay
+              o WeChat)
               <hr />
               <div id="crypto">
                 <style>
                   span {
-                    padding: 1px 0;
                     vertical-align: middle;
                     font-size: 0.8em;
                     font-family: monospace;
@@ -193,7 +192,6 @@
                       word-break: break-all;
                       background-color: #3c3c3d;
                       color: white;
-                      padding-left: 0.2em;
                     "
                     >0x888117715a884a7F84B88CBBBF7998745A5FF96D</span
                   ></span
@@ -230,7 +228,6 @@
                       word-break: break-all;
                       background-color: #ff6600;
                       color: white;
-                      padding-left: 0.2em;
                     "
                     >47qELcVWej3QYFHYZ9JX59QHgmz1eg5ZYGmyZ6wwZs2mYt71xXjAkzrPWvZ922g9jZRF9pEbbbV9QE7mmGArJu187YsXrrt</span
                   ></span
