--- a/index.html
+++ b/index.html
@@ -172,13 +172,12 @@
           <div class="card">
             <div class="card-header">Buy me a coffee</div>
             <div class="card-body">
-              <img src="assets/images/feed.png" /><br />請山前喝奶茶 (via AliPay and
-              WeChat)
+              <img src="assets/images/feed.png" /><br />請山前喝奶茶 (via AliPay
+              and WeChat)
               <hr />
               <div id="crypto">
                 <style>
                   span {
-                    padding: 1px 0;
                     vertical-align: middle;
                     font-size: 0.8em;
                     font-family: monospace;
@@ -198,7 +197,6 @@
                       word-break: break-all;
                       background-color: #3c3c3d;
                       color: white;
-                      padding-left: 0.2em;
                     "
                     >0x888117715a884a7F84B88CBBBF7998745A5FF96D</span
                   ></span
@@ -211,7 +209,7 @@
                     margin: 0.5em 0;
                   "
                   ><span style="background-color: white; color: #0ac18e"
-                    ><i class="moji moji-bch"></i>bitcoincash:</span
+                    ><i class="moji moji-bch"></i>BCH&nbsp;</span
                   ><span
                     style="
                       word-break: break-all;
@@ -219,6 +217,24 @@
                       color: white;
                     "
                     >qrde9e0awf5uwe93g0e4r0gncjvkjd8v9vzp3vw503</span
+                  ></span
+                ><br />
+                <span
+                  class="font-monospace"
+                  style="
+                    border-style: solid;
+                    border-color: #f7931a;
+                    margin: 0.5em 0;
+                  "
+                  ><span style="background-color: white; color: #f7931a"
+                    ><i class="moji moji-bch"></i>BCH&nbsp;</span
+                  ><span
+                    style="
+                      word-break: break-all;
+                      background-color: #f7931a;
+                      color: white;
+                    "
+                    >13YmgQwSh2BYczyxQPuGxuA19sMm2HomZs</span
                   ></span
                 ><br />
                 <span
@@ -235,7 +251,6 @@
                       word-break: break-all;
                       background-color: #ff6600;
                       color: white;
-                      padding-left: 0.2em;
                     "
                     >47qELcVWej3QYFHYZ9JX59QHgmz1eg5ZYGmyZ6wwZs2mYt71xXjAkzrPWvZ922g9jZRF9pEbbbV9QE7mmGArJu187YsXrrt</span
                   ></span
