add btc to all lang

--- a/zh.html
+++ b/zh.html
@@ -214,6 +214,24 @@
                   class="font-monospace"
                   style="
                     border-style: solid;
+                    border-color: #f7931a;
+                    margin: 0.5em 0;
+                  "
+                  ><span style="background-color: white; color: #f7931a"
+                    ><i class="moji moji-bch"></i>BCH&nbsp;</span
+                  ><span
+                    style="
+                      word-break: break-all;
+                      background-color: #f7931a;
+                      color: white;
+                    "
+                    >13YmgQwSh2BYczyxQPuGxuA19sMm2HomZs</span
+                  ></span
+                ><br />
+                <span
+                  class="font-monospace"
+                  style="
+                    border-style: solid;
                     border-color: #ff6600;
                     margin: 0.5em 0;
                   "
