--- a/es.html
+++ b/es.html
@@ -222,7 +222,7 @@
                     margin: 0.5em 0;
                   "
                   ><span style="background-color: white; color: #f7931a"
-                    ><i class="moji moji-bch"></i>BCH&nbsp;</span
+                    ><i class="moji moji-btc"></i>BTC&nbsp;</span
                   ><span
                     style="
                       word-break: break-all;
