--- a/es.html
+++ b/es.html
@@ -175,81 +175,63 @@
                   span {
                     vertical-align: middle;
                     font-size: 0.8em;
-                    font-family: monospace;
+                    font-family: var(--bs-font-monospace);
+                    padding: 2px 0;
+                    border-style: solid;
                   }
                 </style>
-                <span
-                  class="font-monospace"
-                  style="
-                    border-style: solid;
-                    border-color: #3c3c3d;
-                    margin: 0.5em 0;
-                  "
-                  ><span style="background-color: white; color: #3c3c3d"
+                <div>
+                  <span style="background-color: white; color: #3c3c3d"
                     ><i class="moji moji-eth"></i>ETH&nbsp;</span
                   ><span
                     style="
                       word-break: break-all;
                       background-color: #3c3c3d;
+                      border-color: #3c3c3d;
                       color: white;
                     "
                     >0x888117715a884a7F84B88CBBBF7998745A5FF96D</span
-                  ></span
-                ><br />
-                <span
-                  class="font-monospace"
-                  style="
-                    border-style: solid;
-                    border-color: #0ac18e;
-                    margin: 0.5em 0;
-                  "
-                  ><span style="background-color: white; color: #0ac18e"
-                    ><i class="moji moji-bch"></i>bitcoincash:</span
+                  >
+                </div>
+                <div>
+                  <span style="background-color: white; color: #0ac18e"
+                    ><i class="moji moji-bch"></i>BCH&nbsp;</span
                   ><span
                     style="
                       word-break: break-all;
                       background-color: #0ac18e;
+                      border-color: #0ac18e;
                       color: white;
                     "
                     >qrde9e0awf5uwe93g0e4r0gncjvkjd8v9vzp3vw503</span
-                  ></span
-                ><br />
-                <span
-                  class="font-monospace"
-                  style="
-                    border-style: solid;
-                    border-color: #f7931a;
-                    margin: 0.5em 0;
-                  "
-                  ><span style="background-color: white; color: #f7931a"
+                  >
+                </div>
+                <div>
+                  <span style="background-color: white; color: #f7931a"
                     ><i class="moji moji-btc"></i>BTC&nbsp;</span
                   ><span
                     style="
                       word-break: break-all;
                       background-color: #f7931a;
+                      border-color: #f7931a;
                       color: white;
                     "
                     >13YmgQwSh2BYczyxQPuGxuA19sMm2HomZs</span
-                  ></span
-                ><br />
-                <span
-                  class="font-monospace"
-                  style="
-                    border-style: solid;
-                    border-color: #ff6600;
-                    margin: 0.5em 0;
-                  "
-                  ><span style="background-color: white; color: #ff6600"
+                  >
+                </div>
+                <div>
+                  <span style="background-color: white; color: #ff6600"
                     ><i class="moji moji-xmr"></i>XMR&nbsp;</span
                   ><span
                     style="
                       word-break: break-all;
                       background-color: #ff6600;
+                      border-color: #ff6600;
                       color: white;
                     "
                     >47qELcVWej3QYFHYZ9JX59QHgmz1eg5ZYGmyZ6wwZs2mYt71xXjAkzrPWvZ922g9jZRF9pEbbbV9QE7mmGArJu187YsXrrt</span
-                  ></span
-                >
+                  >
+                </div>
               </div>
               <a href="https://liberapay.com/estela/donate"
                 ><img
