--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
               <hr />
               <div id="crypto">
                 <style>
-                  span {
+                  #crypto span {
                     vertical-align: middle;
                     font-size: 0.8em;
                     font-family: var(--bs-font-monospace);
