--- a/zh.html
+++ b/zh.html
@@ -168,7 +168,7 @@
               <hr />
               <div id="crypto">
                 <style>
-                  span {
+                  #crypto span {
                     vertical-align: middle;
                     font-size: 0.8em;
                     font-family: var(--bs-font-monospace);
