--- a/es.html
+++ b/es.html
@@ -142,7 +142,7 @@
               </p>
               <p>
                 Parlante nativa de
-                <a href="https://es.wikipedia.org/wiki/Chino_Wu">Lingua Wu</a>.
+                <a href="https://es.wikipedia.org/wiki/Chino_Wu">Lengua Wu</a>.
                 <a href="https://nguphing.saeziae.net"
                   >Wu language input method</a
                 >
