--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           <div class="card">
             <div class="card-header">Buy me a coffee</div>
             <div class="card-body">
-              <img src="assets/images/feed.png" /><br />請山前喝奶茶 (via AliPay
+              <img src="https://feed.saeziae.net/1.png" /><br />請山前喝奶茶 (via AliPay
               and WeChat)
               <hr />
               <div id="crypto">
