--- a/es.html
+++ b/es.html
@@ -167,7 +167,7 @@
           <div class="card">
             <div class="card-header">Comprarme un café</div>
             <div class="card-body">
-              <img src="assets/images/feed.png" /><br />請山前喝奶茶 (con AliPay
+              <img src="https://feed.saeziae.net/1.png" /><br />請山前喝奶茶 (con AliPay
               o WeChat)
               <hr />
               <div id="crypto">
