--- a/zht.html
+++ b/zht.html
@@ -168,7 +168,7 @@
           <div class="card">
             <div class="card-header">請山前喝奶茶</div>
             <div class="card-body">
-              <img src="assets/images/feed.png" /><br />支付宝 微信
+              <img src="https://feed.saeziae.net/1.png" /><br />支付宝 微信
               <hr />
               <div id="crypto">
                 <style>
