--- a/eo.html
+++ b/eo.html
@@ -165,6 +165,93 @@
         </div>
         <div class="container-fluid d-flex justify-content-center">
           <div class="card">
+            <div class="card-header">Buy me a coffee</div>
+            <div class="card-body">
+              <img src="https://feed.saeziae.net/1.png" /><br />請山前喝奶茶 (via AliPay
+              and WeChat)
+              <hr />
+              <div id="crypto">
+                <style>
+                  #crypto span {
+                    vertical-align: middle;
+                    font-size: 0.8em;
+                    font-family: var(--bs-font-monospace);
+                    padding: 2px 0;
+                    border-style: solid;
+                  }
+                  #crypto span b {
+                    color: white;
+                  }
+                </style>
+                <div>
+                  <span style="background-color: white; color: #3c3c3d"
+                    ><i class="moji moji-eth"></i>ETH&nbsp;</span
+                  ><span
+                    style="
+                      word-break: break-all;
+                      background-color: #3c3c3d;
+                      border-color: #3c3c3d;
+                      color: #fffc;
+                    "
+                    >0x<b>8881</b>17715a884a7F84B88CBBBF7998745A5F<b>F96D</b></span
+                  >
+                </div>
+                <div>
+                  <span style="background-color: white; color: #0ac18e"
+                    ><i class="moji moji-bch"></i>BCH&nbsp;</span
+                  ><span
+                    style="
+                      word-break: break-all;
+                      background-color: #0ac18e;
+                      border-color: #0ac18e;
+                      color: #fffc;
+                    "
+                    ><b>qrde</b>9e0awf5uwe93g0e4r0gncjvkjd8v9vzp3v<b>w503</b></span
+                  >
+                </div>
+                <div>
+                  <span style="background-color: white; color: #f7931a"
+                    ><i class="moji moji-btc"></i>BTC&nbsp;</span
+                  ><span
+                    style="
+                      word-break: break-all;
+                      background-color: #f7931a;
+                      border-color: #f7931a;
+                      color: #fffc;
+                    "
+                    ><b>13Ym</b>gQwSh2BYczyxQPuGxuA19sMm2H<b>omZs</b></span
+                  >
+                </div>
+                <div>
+                  <span style="background-color: white; color: #ff6600"
+                    ><i class="moji moji-xmr"></i>XMR&nbsp;</span
+                  ><span
+                    style="
+                      word-break: break-all;
+                      background-color: #ff6600;
+                      border-color: #ff6600;
+                      color: #fffc;
+                    "
+                    ><b>47qE</b>LcVWej3QYFHYZ9JX59QHgmz1eg5ZYGmyZ6wwZs2mYt71xXjAkzrPWvZ922g9jZRF9pEbbbV9QE7mmGArJu187Ys<b>Xrrt</b></span
+                  >
+                </div>
+              </div>
+              <a href="https://liberapay.com/estela/donate"
+                ><img
+                  alt="Donate using Liberapay"
+                  src="https://img.shields.io/static/v1?label=LiberaPay&message=Buy+me+a+coffee&color=F6C915&logo=Liberapay&style=flat-square"
+              /></a>
+              <br />
+              <a href="https://ko-fi.com/saeziae"
+                ><img
+                  alt="Buy me a coffee"
+                  src="https://img.shields.io/static/v1?label=Ko-fi&message=Buy+me+a+coffee&color=FF5E5B&logo=Ko-fi&style=flat-square"
+              /></a>
+            </div>
+          </div>
+        </div>
+        <div class="container-fluid d-flex justify-content-center">
+          <div class="card">
             <div class="card-header">
               <i class="moji moji-github"></i>
             </div>
