--- a/zht.html
+++ b/zht.html
@@ -179,6 +179,9 @@
                     padding: 2px 0;
                     border-style: solid;
                   }
+                  #crypto span b {
+                    color: white;
+                  }
                 </style>
                 <div>
                   <span style="background-color: white; color: #3c3c3d"
@@ -188,9 +191,9 @@
                       word-break: break-all;
                       background-color: #3c3c3d;
                       border-color: #3c3c3d;
-                      color: white;
+                      color: #fffc;
                     "
-                    >0x888117715a884a7F84B88CBBBF7998745A5FF96D</span
+                    >0x<b>8881</b>17715a884a7F84B88CBBBF7998745A5F<b>F96D</b></span
                   >
                 </div>
                 <div>
@@ -201,9 +204,9 @@
                       word-break: break-all;
                       background-color: #0ac18e;
                       border-color: #0ac18e;
-                      color: white;
+                      color: #fffc;
                     "
-                    >qrde9e0awf5uwe93g0e4r0gncjvkjd8v9vzp3vw503</span
+                    ><b>qrde</b>9e0awf5uwe93g0e4r0gncjvkjd8v9vzp3v<b>w503</b></span
                   >
                 </div>
                 <div>
@@ -214,9 +217,9 @@
                       word-break: break-all;
                       background-color: #f7931a;
                       border-color: #f7931a;
-                      color: white;
+                      color: #fffc;
                     "
-                    >13YmgQwSh2BYczyxQPuGxuA19sMm2HomZs</span
+                    ><b>13Ym</b>gQwSh2BYczyxQPuGxuA19sMm2H<b>omZs</b></span
                   >
                 </div>
                 <div>
@@ -227,9 +230,9 @@
                       word-break: break-all;
                       background-color: #ff6600;
                       border-color: #ff6600;
-                      color: white;
+                      color: #fffc;
                     "
-                    >47qELcVWej3QYFHYZ9JX59QHgmz1eg5ZYGmyZ6wwZs2mYt71xXjAkzrPWvZ922g9jZRF9pEbbbV9QE7mmGArJu187YsXrrt</span
+                    ><b>47qE</b>LcVWej3QYFHYZ9JX59QHgmz1eg5ZYGmyZ6wwZs2mYt71xXjAkzrPWvZ922g9jZRF9pEbbbV9QE7mmGArJu187Ys<b>Xrrt</b></span
                   >
                 </div>
               </div>
