use trans fist sign

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               </h2>
               <p>
                 <i class="moji moji-trans"></i>
-                <i class="moji moji-feminism"></i>
+                <i class="moji moji-transfist"></i>
                 <i class="moji moji-communism"></i>
                 <i class="moji moji-peace"></i>
                 <i class="moji moji-fist"></i>
