--- a/ru.html
+++ b/ru.html
@@ -87,7 +87,7 @@
               <h2 class="card-title" style="margin-left: 130px">Предгорка</h2>
               <p>
                 <i class="moji moji-trans"></i>
-                <i class="moji moji-feminism"></i>
+                <i class="moji moji-transfist"></i>
                 <i class="moji moji-communism"></i>
                 <i class="moji moji-peace"></i>
                 <i class="moji moji-fist"></i>
