--- a/ar.html
+++ b/ar.html
@@ -94,7 +94,7 @@
               <h2 class="card-title" style="margin-right: 130px">إستيلا</h2>
               <p>
                 <i class="moji moji-trans"></i>
-                <i class="moji moji-feminism"></i>
+                <i class="moji moji-transfist"></i>
                 <i class="moji moji-communism"></i>
                 <i class="moji moji-peace"></i>
                 <i class="moji moji-fist"></i>
