--- a/ko.html
+++ b/ko.html
@@ -113,7 +113,7 @@
               <strong>전진! 전진! 전진!</strong>
               <p>
                 <i class="moji moji-trans"></i>
-                <i class="moji moji-feminism"></i>
+                <i class="moji moji-transfist"></i>
                 <i class="moji moji-communism"></i>
                 <i class="moji moji-peace"></i>
                 <i class="moji moji-fist"></i>
