--- a/zht.html
+++ b/zht.html
@@ -97,7 +97,7 @@
               <h2 class="card-title" style="margin-left: 130px">山前</h2>
               <p>
                 <i class="moji moji-trans"></i>
-                <i class="moji moji-feminism"></i>
+                <i class="moji moji-transfist"></i>
                 <i class="moji moji-communism"></i>
                 <i class="moji moji-peace"></i>
                 <i class="moji moji-fist"></i>
