--- a/zh.html
+++ b/zh.html
@@ -33,8 +33,9 @@
               <a href="index.html"><i class="moji moji-uk"></i>English</a>
             </li>
             <li class="breadcrumb-item active">
-              <i class="moji moji-cn"></i>中文 <a href="ug.html">ئۇيغۇرچە</a>
+              <i class="moji moji-cn"></i>中文
             </li>
+            <li class="breadcrumb-item"><a href="ug.html">ئۇيغۇرچە</a></li>
             <li class="breadcrumb-item"><a href="bo.html">བོད་སྐད་</a></li>
             <li class="breadcrumb-item"><a href="tai.html">Tai</a></li>
             <li class="breadcrumb-item"><a href="ko.html">조선어</a></li>
@@ -91,13 +92,7 @@
             >
             <div class="card-body">
               <h2 class="card-title" style="margin-left: 130px">山前</h2>
-              <p>
-                <i class="moji moji-trans"></i>
-                <i class="moji moji-transfist"></i>
-                <i class="moji moji-communism"></i>
-                <i class="moji moji-peace"></i>
-                <i class="moji moji-fist"></i>
-              </p>
+
               <table>
                 <tr>
                   <td>
@@ -189,7 +184,9 @@
                       border-color: #3c3c3d;
                       color: #fffc;
                     "
-                    >0x<b>8881</b>17715a884a7F84B88CBBBF7998745A5F<b>F96D</b></span
+                    >0x<b>8881</b>17715a884a7F84B88CBBBF7998745A5F<b
+                      >F96D</b
+                    ></span
                   >
                 </div>
                 <div>
@@ -202,7 +199,9 @@
                       border-color: #0ac18e;
                       color: #fffc;
                     "
-                    ><b>qrde</b>9e0awf5uwe93g0e4r0gncjvkjd8v9vzp3v<b>w503</b></span
+                    ><b>qrde</b>9e0awf5uwe93g0e4r0gncjvkjd8v9vzp3v<b
+                      >w503</b
+                    ></span
                   >
                 </div>
                 <div>
@@ -228,7 +227,10 @@
                       border-color: #ff6600;
                       color: #fffc;
                     "
-                    ><b>47qE</b>LcVWej3QYFHYZ9JX59QHgmz1eg5ZYGmyZ6wwZs2mYt71xXjAkzrPWvZ922g9jZRF9pEbbbV9QE7mmGArJu187Ys<b>Xrrt</b></span
+                    ><b>47qE</b
+                    >LcVWej3QYFHYZ9JX59QHgmz1eg5ZYGmyZ6wwZs2mYt71xXjAkzrPWvZ922g9jZRF9pEbbbV9QE7mmGArJu187Ys<b
+                      >Xrrt</b
+                    ></span
                   >
                 </div>
               </div>
