--- a/zht.html
+++ b/zht.html
@@ -163,7 +163,8 @@
           <div class="card">
             <div class="card-header">請山前喝奶茶</div>
             <div class="card-body">
-              <img src="https://feed.saeziae.net/1.png" /><br />支付宝 微信
+              <div id="qrcode"></div>
+              支付宝 微信
               <hr />
               <div id="crypto">
                 <style>
@@ -280,6 +281,8 @@
       </div>
     </footer>
     <script src="assets/bootstrap.bundle.min.js"></script>
+    <script src="assets/qrcode.min.js"></script>
+    <script src="assets/codegen.js"></script>
   </body>
   <script>
     document.getElementById("year").innerHTML = new Date().getFullYear();
