remove some languages

--- a/ar.html
+++ b/ar.html
@@ -40,7 +40,6 @@
               <a href="zh.html"><i class="moji moji-cn"></i>中文</a>
             </li>
             <li class="breadcrumb-item"><a href="ug.html">ئۇيغۇرچە</a></li>
-            <li class="breadcrumb-item"><a href="bo.html">བོད་སྐད་</a></li>
             <li class="breadcrumb-item"><a href="tai.html">Tai</a></li>
             <li class="breadcrumb-item"><a href="ko.html">조선어</a></li>
             <li class="breadcrumb-item">
@@ -49,12 +48,6 @@
             <li class="breadcrumb-item"><a href="cat.html">Català</a></li>
             <li class="breadcrumb-item active">
               <i class="moji moji-ar"></i>العربية
-            </li>
-            <li class="breadcrumb-item">
-              <a href="ru.html"><i class="moji moji-su"></i>Русский</a>
-            </li>
-            <li class="breadcrumb-item">
-              <a href="uk.html">український</a>
             </li>
             <li class="breadcrumb-item">
               <a href="eo.html"><i class="moji moji-eo"></i>Esperanto</a>
@@ -92,7 +85,6 @@
             >
             <div class="card-body">
               <h2 class="card-title" style="margin-right: 130px">إستيلا</h2>
-
               <table class="sociales">
                 <tr>
                   <td>
@@ -134,9 +126,8 @@
               </table>
               <p>اهلا 👋🏻 أنا إستيلا</p>
               <p>
-                <i class="moji moji-trans" role="img" aria-label="🏳️‍⚧️"></i
-                >فخورة متحولة جنسيا. صائنة ل
-                <a href="https://mtf.wiki/">MtF-Wiki</a>.
+                <i class="moji moji-trans" role="img" aria-label="🏳️‍⚧️"></i>فخورة
+                متحولة جنسيا. صائنة ل <a href="https://mtf.wiki/">MtF-Wiki</a>.
               </p>
               <p>عاشقة التنانير. 🍱 «جورميه».</p>
               <p>👩🏻‍🎓تخصص اللغة الاسبانية في الجامعة .</p>
