--- a/index.html
+++ b/index.html
@@ -56,7 +56,23 @@
     </header>
     <main class="flex-shrink-0">
       <div class="container d-grid gap-3">
-        
+        <div class="container-fluid d-flex justify-content-center">
+          <div class="card" style="width: 18rem">
+            <div class="card-header">Links</div>
+            <ul class="list-group list-group-flush">
+              <a href="https://nguphing.saeziae.net" class="list-group-item"
+                >Wu Language IME</a
+              >
+              <a href="https://soochow.saeziae.net" class="list-group-item"
+                >Suzhou Wu Dialect Dict</a
+              >
+              <a href="https://mtf.wiki" class="list-group-item">MtF Wiki</a>
+              <a href="amigos.html" class="list-group-item">Friends</a>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="container d-grid gap-3">
         <div class="container-fluid d-flex justify-content-center">
           <div class="card" style="position: relative; margin-top: 80px">
             <img
