--- a/zh.html
+++ b/zh.html
@@ -65,6 +65,23 @@
     <main class="flex-shrink-0">
       <div class="container d-grid gap-3">
         <div class="container-fluid d-flex justify-content-center">
+          <div class="card" style="width: 18rem">
+            <div class="card-header">相关链接</div>
+            <ul class="list-group list-group-flush">
+              <a href="https://nguphing.saeziae.net" class="list-group-item"
+                >吴语输入法</a
+              >
+              <a href="https://soochow.saeziae.net" class="list-group-item"
+                >苏州话字典</a
+              >
+              <a href="https://mtf.wiki" class="list-group-item">MtF Wiki</a>
+              <a href="amigos.html" class="list-group-item">友情链接</a>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="container d-grid gap-3">
+        <div class="container-fluid d-flex justify-content-center">
           <div class="card" style="position: relative; margin-top: 80px">
             <img
               src="assets/images/head.jpg"
