--- a/zht.html
+++ b/zht.html
@@ -67,6 +67,21 @@
       </div>
     </header>
     <main class="flex-shrink-0">
+      <div class="container-fluid d-flex justify-content-center">
+        <div class="card" style="width: 18rem">
+          <div class="card-header">相關連結</div>
+          <ul class="list-group list-group-flush">
+            <a href="https://nguphing.saeziae.net" class="list-group-item"
+              >吳語輸入法</a
+            >
+            <a href="https://soochow.saeziae.net" class="list-group-item"
+              >蘇州話字典</a
+            >
+            <a href="https://mtf.wiki" class="list-group-item">MtF Wiki</a>
+            <a href="amigos.html" class="list-group-item">友情連結</a>
+          </ul>
+        </div>
+      </div>
       <div class="container d-grid gap-3">
         <div class="container-fluid d-flex justify-content-center">
           <div class="card" style="position: relative; margin-top: 80px">
